--- a/index.html
+++ b/index.html
@@ -39,7 +39,16 @@
         <div>Some Random Information</div>
         <div>Image Row</div>
       </div>
-      <div class="quote">Quote</div>
+      <div class="quote-section">
+        <div>
+          <div class="quote-text">
+            This is an inspiring quote, or a testimonial from a customer. Maybe
+            it's just filling up space, or maybe people will actually read it.
+            Who knows? All I know is that it looks nice.
+          </div>
+          <div class="quote-author">-Thor, God of Thunder</div>
+        </div>
+      </div>
       <div class="sign-up">Sign Up</div>
     </div>
     <div class="footer">Copyright &copy; The Odin Project 2025</div>
