Style call to action section

--- a/index.html
+++ b/index.html
@@ -49,7 +49,17 @@
           <div class="quote-author">-Thor, God of Thunder</div>
         </div>
       </div>
-      <div class="sign-up">Sign Up</div>
+      <div class="call-to-action-section">
+        <div class="call-to-action-box">
+          <div>
+            <div class="call-to-action-main-text">Call to action! It's time!</div>
+            <div class="call-to-action-secondary-text">
+              Sign up for our product by clicking that button right there!
+            </div>
+          </div>
+          <button class="sign-up-button-white-border">Sign up</button>
+        </div>
+      </div>
     </div>
     <div class="footer">Copyright &copy; The Odin Project 2025</div>
   </body>
