Style the info header and add squares row

--- a/index.html
+++ b/index.html
@@ -36,8 +36,13 @@
     </div>
     <div class="main">
       <div class="info-header">
-        <div>Some Random Information</div>
-        <div>Image Row</div>
+        <div class="info-header-text">Some Random Information</div>
+        <div class="image-row">
+          <div class="square"></div>
+          <div class="square"></div>
+          <div class="square"></div>
+          <div class="square"></div>
+        </div>
       </div>
       <div class="quote-section">
         <div>
@@ -52,7 +57,9 @@
       <div class="call-to-action-section">
         <div class="call-to-action-box">
           <div>
-            <div class="call-to-action-main-text">Call to action! It's time!</div>
+            <div class="call-to-action-main-text">
+              Call to action! It's time!
+            </div>
             <div class="call-to-action-secondary-text">
               Sign up for our product by clicking that button right there!
             </div>
