Refactor: Add min-height to each of the main sections: info header, quote and call to action sections.
Originally, no heights were provided, which
resulted in everything being crammed in one page,
which dulled the look of the page, so we traded
off fitting everything in one page for a more
spacious and aesthetically pleasing look

--- a/index.html
+++ b/index.html
@@ -38,10 +38,30 @@
       <div class="info-header">
         <div class="info-header-text">Some Random Information</div>
         <div class="image-row">
-          <div class="square"></div>
-          <div class="square"></div>
-          <div class="square"></div>
-          <div class="square"></div>
+          <div>
+            <div class="square"></div>
+            <div class="image-subtext">
+              This is some subtext under an illustration or image
+            </div>
+          </div>
+          <div>
+            <div class="square"></div>
+            <div class="image-subtext">
+              This is some subtext under an illustration or image
+            </div>
+          </div>
+          <div>
+            <div class="square"></div>
+            <div class="image-subtext">
+              This is some subtext under an illustration or image
+            </div>
+          </div>
+          <div>
+            <div class="square"></div>
+            <div class="image-subtext">
+              This is some subtext under an illustration or image
+            </div>
+          </div>
         </div>
       </div>
       <div class="quote-section">
